--- a/play.html
+++ b/play.html
@@ -88,7 +88,7 @@
         </div>
         <audio id="music">
             <source src=""></audio>
-        <script src="https://s1.pstatp.com/cdn/expire-1-M/??jquery/3.4.0/jquery.js"></script>
+        <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
         <script src="JS/jquery.mCustomScrollbar.concat.min.js"></script>
         <script src="JS/tool.js"></script>
         <script src="JS/init.js"></script>
